# source_detection_in_grns

./: .gitignore  .gitmodules  README.md  README.txt  compare_random_graphs.py  compute_thresholds.py  create_pdgrapher_comparison.py  create_splits_for_processed_data.py  cross_run_comparison.py  dvc.yaml  estimate_training.py  gpu_monitor.py  graph_comparison.ipynb  graph_perturbation.ipynb  main.py  monitor_resources.py  package-lock.json  params.yaml  params.yaml.save  pyproject.toml  requirements.in  requirements.txt  run_all.sh  run_all_experiments.sh
architectures/: GAT.py  GCNSI.py  PDGrapherNoGNN.py
configs/: shared.yaml
data_exploration/: AHR_0.pt  AR_0.pt  README.txt  analyze_racipe.ipynb  compare_kegg_trrust.ipynb  constants.py  create_kegg_pathway_network.ipynb  dorothea.ipynb  dorothea_100_150.topo  dorothea_250_500.topo  dorothea_390_1096.topo  dorothea_500_1000.topo  dorothea_500_1250.topo  dorothea_500_1500.topo  dorothea_500_2500.topo  dorothea_500_550.topo  dorothea_500_800.topo  dorothea_500_900.topo  export_dorothea.R  random_10716_300000.topo
docs/: data_creation.md  grins.md
experimental/: inspect_data_creation.ipynb
slurm/: data_creation.sbatch  dual_model_pipeline.sbatch  dual_model_training_pipeline.sbatch  full_pipeline.sbatch  pdgrapher_pipeline.sbatch  pdgrapher_test.sbatch  rerun_all_training.sbatch  rerun_training_pipeline.sbatch  run_all_experiments.sbatch  run_all_experiments_dual.sbatch  run_all_experiments_triple.sbatch  run_single_experiment.sbatch  run_single_experiment_dual.sbatch  run_single_experiment_triple.sbatch  run_single_experiment_with_dependency.sbatch  shared_data_creation.sbatch  train_pdgrapher_from_processed_data.sbatch  train_pdgraphernognn_from_processed_data.sbatch  training.sbatch  training_small.sbatch  validate_pdgrapher.sbatch  validation.sbatch
slurm_out/: slurm_720128_cx43_data_creation_test_720128_4294967294.err  slurm_720128_cx43_data_creation_test_720128_4294967294.out  slurm_720251_cx03_data_creation_test_720251_4294967294.err  slurm_720251_cx03_data_creation_test_720251_4294967294.out  slurm_722564_cx01_data_creation_tiny_722564_4294967294.err  slurm_722564_cx01_data_creation_tiny_722564_4294967294.out  slurm_722565_cx01_data_creation_tiny_722565_4294967294.err  (+1 more)
(+4570 files in other folders)
