[project]
name = "source-detection-in-grns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, < 3.13"
dependencies = [
    "cdlib>=0.4.0",
    "dataclasses-json>=0.6.7",
    "dvc>=3.60.1",
    "ndlib>=5.1.1",
    "numpy>=2.3.1",
    "scikit-learn>=1.7.0",
    "tensorboard>=2.19.0",
    "torch>=2.7.1",
    "torch-geometric>=2.6.1",
]
