[project]
name = "source-detection-in-grns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, < 3.13"
dependencies = [
    "cdlib>=0.4.0",
    "dataclasses-json>=0.6.7",
    "dvc>=3.60.1",
    "lightning>=2.5.2",
    "ndlib>=5.1.1",
    "numpy>=2.3.1",
    "scikit-learn>=1.7.0",
    "tensorboard>=2.19.0",
    "torch>=2.7.1",
    "torch-geometric==2.3.1",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
    "pdgrapher @ file:///${PROJECT_ROOT}/external/PDGrapher",
    "grins @ file:///${PROJECT_ROOT}/external/GRiNS",
    "pandas>=2.3.0",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "jax-cuda12-pjrt>=0.5.3",
    "jax-cuda12-plugin>=0.5.3",
    "nvidia-cuda-nvcc-cu12>=12.9.86",
]
